# smart-health-watch

./: CMakeLists.txt  partitions.csv
components/display/: CMakeLists.txt  display.c  display.h
components/drivers/mlx90614/: CMakeLists.txt
components/drivers/mlx90614/include/: mlx90614.h
components/drivers/mlx90614/src/: mlx90614.c
components/drivers/neo6m/: CMakeLists.txt
components/drivers/ssd1306/: CMakeLists.txt
components/lvgl__lvgl/: lv_conf_template.h
components/temp/: CMakeLists.txt  temp.c  temp.h
components/utils/bluetooth/: CMakeLists.txt
components/utils/bluetooth/include/: bluetooth.h
components/utils/bluetooth/src/: bluetooth.c
components/utils/button/: CMakeLists.txt
components/utils/button/include/: button.h
components/utils/http/: CMakeLists.txt
components/utils/i2c/: CMakeLists.txt
components/utils/mqttc/: CMakeLists.txt
components/utils/wifi/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.c  partitions.csv  plot_ppg.ipynb  ui_manager.c
main/icons/: The_Artists_Garden_at_Eragny.c  bluetooth_icon.c  data_icon.c  gps_icon.c  heart_icon.c  notify_icon.c  temp_icon.c  wifi_icon.c
main/include/: ui_manager.h
tasks/display/: CMakeLists.txt
tasks/display/include/: display_task.h
tasks/display/src/: display_task.c
tasks/gps/: CMakeLists.txt
tasks/gps/include/: gps_tracker.h
tasks/gps/src/: gps_tracker.c
tasks/sensor/health/: CMakeLists.txt
tasks/sensor/temperature/: CMakeLists.txt
web_server/: app.py  data.json
web_server/static/: script.js  style.css
web_server/templates/: index.html
(+15 files in other folders)
